[package]
name = "db-server"
version = "0.1.0"
authors = ["Sean Chen <seanchen11235@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "db_server"
path = "src/bin/main.rs"

[lib]
name = "db_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde_any = "0.5"
